--- a/Survey/source/styles/informal/_t-question-base.scss
+++ b/Survey/source/styles/informal/_t-question-base.scss
@@ -49,7 +49,8 @@ html[dir="rtl"] .o-question-errorandinstruction {
     padding-left: 1em;
 }
 
-.sidebyside .o-question-information-and-messages {
+.sidebyside .o-question-information-and-messages,
+.sidebyside .o-question-information-messages {
     box-sizing: border-box;
     margin-right: 1em;
     padding-right: 1em;
